--- a/bank.yml
+++ b/bank.yml
@@ -14,6 +14,10 @@ database:
   # the JDBC URL
   url: jdbc:h2:./target/example
 
+  properties:
+    charSet: UTF-8
+    hibernate.dialect: org.hibernate.dialect.H2Dialect
+
 # use the simple server factory if you only want to run on a single port
 #server:
 #  type: simple
